--- a/web/index.html
+++ b/web/index.html
@@ -361,7 +361,7 @@
             <a href="/" class="logo" aria-label="MX-Gathering Home">MX-Gathering</a>
             <nav aria-label="Main navigation">
                 <ul>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="#resources">Resources</a></li>
                     <li><a href="#community">Community</a></li>
                     <li><a href="https://github.com/Digital-Domain-Technologies-Ltd/MX-Gathering">GitHub</a></li>
