--- a/web/about.html
+++ b/web/about.html
@@ -23,9 +23,13 @@
     <meta property="twitter:title" content="About MX-Gathering: A New Community for Machine Experience">
     <meta property="twitter:description" content="Join our new community building resources and thought leadership around Machine Experience patterns.">
     <meta property="twitter:image" content="https://mx-thegathering.ai/assets/social-card.png">
+    <meta property="twitter:image:alt" content="MX-Gathering about page with manifesto core principles">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://mx-thegathering.ai/about.html">
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="shared-gathering.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
@@ -76,289 +80,6 @@
       }
     }
     </script>
-
-    <style>
-        /* Reset and base styles */
-        *, *::before, *::after {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        :root {
-            --color-primary: #2563eb;
-            --color-primary-dark: #1e40af;
-            --color-secondary: #7c3aed;
-            --color-background: #ffffff;
-            --color-surface: #f8fafc;
-            --color-text: #1e293b;
-            --color-text-light: #64748b;
-            --color-border: #e2e8f0;
-            --color-success: #10b981;
-            --color-warning: #f59e0b;
-            --spacing-unit: 1rem;
-            --max-width: 800px;
-            --font-body: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            --font-heading: 'Inter', var(--font-body);
-        }
-
-        body {
-            font-family: var(--font-body);
-            font-size: 1.125rem;
-            line-height: 1.75;
-            color: var(--color-text);
-            background-color: var(--color-background);
-        }
-
-        /* Skip link for accessibility */
-        .skip-link {
-            position: absolute;
-            top: -40px;
-            left: 0;
-            background: var(--color-primary);
-            color: white;
-            padding: 8px;
-            text-decoration: none;
-            z-index: 100;
-        }
-
-        .skip-link:focus {
-            top: 0;
-        }
-
-        /* Header */
-        header {
-            background-color: var(--color-surface);
-            border-bottom: 1px solid var(--color-border);
-            padding: calc(var(--spacing-unit) * 2) 0;
-        }
-
-        .header-content {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 var(--spacing-unit);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-wrap: wrap;
-            gap: var(--spacing-unit);
-        }
-
-        .logo {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: var(--color-primary);
-            text-decoration: none;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: calc(var(--spacing-unit) * 2);
-            flex-wrap: wrap;
-        }
-
-        nav a {
-            color: var(--color-text);
-            text-decoration: none;
-            font-weight: 500;
-            transition: color 0.2s;
-        }
-
-        nav a:hover,
-        nav a:focus {
-            color: var(--color-primary);
-            text-decoration: underline;
-        }
-
-        nav a[aria-current="page"] {
-            color: var(--color-primary);
-            border-bottom: 2px solid var(--color-primary);
-        }
-
-        /* Main content */
-        main {
-            max-width: var(--max-width);
-            margin: 0 auto;
-            padding: calc(var(--spacing-unit) * 4) var(--spacing-unit);
-        }
-
-        /* Status badge */
-        .status-badge {
-            display: inline-block;
-            background-color: var(--color-warning);
-            color: white;
-            padding: calc(var(--spacing-unit) * 0.5) var(--spacing-unit);
-            border-radius: 0.5rem;
-            font-weight: 600;
-            font-size: 0.875rem;
-            margin-bottom: calc(var(--spacing-unit) * 2);
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            font-weight: 800;
-            line-height: 1.2;
-            margin-bottom: calc(var(--spacing-unit) * 2);
-            background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-secondary) 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-
-        h2 {
-            font-size: 1.75rem;
-            font-weight: 700;
-            margin-top: calc(var(--spacing-unit) * 3);
-            margin-bottom: var(--spacing-unit);
-            color: var(--color-text);
-        }
-
-        h3 {
-            font-size: 1.375rem;
-            font-weight: 600;
-            margin-top: calc(var(--spacing-unit) * 2);
-            margin-bottom: calc(var(--spacing-unit) * 0.75);
-            color: var(--color-text);
-        }
-
-        p {
-            margin-bottom: var(--spacing-unit);
-        }
-
-        .lead {
-            font-size: 1.25rem;
-            color: var(--color-text-light);
-            margin-bottom: calc(var(--spacing-unit) * 2);
-        }
-
-        /* Principles list */
-        .principles {
-            background-color: var(--color-surface);
-            border-left: 4px solid var(--color-primary);
-            padding: calc(var(--spacing-unit) * 2);
-            margin: calc(var(--spacing-unit) * 2) 0;
-            border-radius: 0.5rem;
-        }
-
-        .principles ol {
-            margin-left: calc(var(--spacing-unit) * 1.5);
-        }
-
-        .principles li {
-            margin-bottom: calc(var(--spacing-unit) * 0.5);
-        }
-
-        .principles strong {
-            color: var(--color-primary);
-        }
-
-        /* Call to action box */
-        .cta-box {
-            background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-secondary) 100%);
-            color: white;
-            padding: calc(var(--spacing-unit) * 3);
-            border-radius: 0.75rem;
-            margin: calc(var(--spacing-unit) * 3) 0;
-            text-align: center;
-        }
-
-        .cta-box h2 {
-            color: white;
-            margin-top: 0;
-        }
-
-        .cta-box p {
-            font-size: 1.125rem;
-            margin-bottom: calc(var(--spacing-unit) * 2);
-        }
-
-        .cta-buttons {
-            display: flex;
-            gap: var(--spacing-unit);
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: calc(var(--spacing-unit) * 0.75) calc(var(--spacing-unit) * 2);
-            border-radius: 0.5rem;
-            font-weight: 600;
-            text-decoration: none;
-            transition: all 0.2s;
-            border: 2px solid white;
-        }
-
-        .btn-primary {
-            background-color: white;
-            color: var(--color-primary);
-        }
-
-        .btn-primary:hover,
-        .btn-primary:focus {
-            background-color: var(--color-surface);
-            transform: translateY(-2px);
-        }
-
-        .btn-secondary {
-            background-color: transparent;
-            color: white;
-        }
-
-        .btn-secondary:hover,
-        .btn-secondary:focus {
-            background-color: rgba(255, 255, 255, 0.1);
-        }
-
-        /* Footer */
-        footer {
-            background-color: var(--color-surface);
-            border-top: 1px solid var(--color-border);
-            padding: calc(var(--spacing-unit) * 3) 0;
-            margin-top: calc(var(--spacing-unit) * 6);
-        }
-
-        .footer-content {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 var(--spacing-unit);
-            text-align: center;
-            color: var(--color-text-light);
-        }
-
-        .footer-content a {
-            color: var(--color-primary);
-            text-decoration: none;
-        }
-
-        .footer-content a:hover,
-        .footer-content a:focus {
-            text-decoration: underline;
-        }
-
-        /* Responsive design */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2rem;
-            }
-
-            h2 {
-                font-size: 1.5rem;
-            }
-
-            nav ul {
-                flex-direction: column;
-                gap: calc(var(--spacing-unit) * 0.5);
-            }
-        }
-
-        /* Focus visible for accessibility */
-        *:focus-visible {
-            outline: 2px solid var(--color-primary);
-            outline-offset: 2px;
-        }
-    </style>
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -377,7 +98,7 @@
         </div>
     </header>
 
-    <main id="main-content" data-page-type="about" data-content-category="community-information">
+    <main id="main-content" class="about-content" data-page-type="about" data-content-category="community-information">
         <article itemscope itemtype="https://schema.org/AboutPage">
             <span class="status-badge"
                   data-status="launching-soon"
@@ -390,7 +111,7 @@
                 MX-Gathering is a new open-source community building resources, thought leadership, and collaborative knowledge around Machine Experience (MX) patterns.
             </p>
 
-            <h2>What is Machine Experience?</h2>
+            <h2 id="what-is-machine-experience">What is Machine Experience?</h2>
 
             <p>
                 Machine Experience (MX) is the practice of designing and building digital interfaces with explicit recognition that AI agents are legitimate users deserving thoughtful design consideration.
@@ -400,7 +121,7 @@
                 Where User Experience (UX) focused exclusively on human interaction, Machine Experience acknowledges a fundamental shift: autonomous systems now browse websites, complete purchases, extract information, and make decisions without human intervention.
             </p>
 
-            <h2>Our Manifesto: Core Principles</h2>
+            <h2 id="our-manifesto-core-principles">Our Manifesto: Core Principles</h2>
 
             <p>
                 MX-Gathering operates on a foundation of seven core principles that guide our community and practice:
@@ -435,7 +156,7 @@
                 </ol>
             </div>
 
-            <h2>The Convergence Principle</h2>
+            <h2 id="the-convergence-principle">The Convergence Principle</h2>
 
             <p>
                 At the heart of Machine Experience lies the <strong>Convergence Principle</strong>: interfaces optimised for machines inherently improve experiences for humans.
@@ -445,7 +166,7 @@
                 The same patterns that enable AI agents to navigate, understand, and act upon digital content also empower human users with disabilities, enhance accessibility, and create more robust, maintainable systems. This is not a trade-off - it is a convergence of benefits.
             </p>
 
-            <h2 data-section="community-authorship">Community Authorship</h2>
+            <h2 id="community-authorship" data-section="community-authorship">Community Authorship</h2>
 
             <p data-authorship-model="collaborative"
                data-contributor-types="human,machine">
@@ -457,7 +178,7 @@
                 The foundational knowledge comes from the <strong>MX-Bible</strong> book, written by Tom Cranstoun. This repository is the community's collaborative space where practitioners - human and machine - contribute patterns, document failures, share validation rules, and build collective knowledge.
             </p>
 
-            <h3 data-section="open-source-rationale">Why Open Source?</h3>
+            <h3 id="why-open-source" data-section="open-source-rationale">Why Open Source?</h3>
 
             <p data-license="MIT"
                data-license-rationale="convergence-principle">
@@ -473,7 +194,7 @@
                  data-cta-priority="high"
                  data-document-status="draft"
                  role="complementary">
-                <h2>Read the Full Manifesto</h2>
+                <h2 id="read-the-full-manifesto">Read the Full Manifesto</h2>
                 <p>
                     Explore our complete vision for Machine Experience, including who uses MX practice, what MX is not, how it builds on existing disciplines, and our commitment to the community.
                 </p>
@@ -488,7 +209,7 @@
                 </div>
             </div>
 
-            <h2 data-section="contributions">Contribute to the Community</h2>
+            <h2 id="contribute-to-the-community" data-section="contributions">Contribute to the Community</h2>
 
             <p data-launch-status="launching-soon"
                data-accepting-contributions="true"
@@ -500,7 +221,7 @@
                 Whether you optimise a single heading hierarchy or architect an entire platform for agent access, you are practising MX. Your insights, patterns, and experiences strengthen the community.
             </p>
 
-            <h3 data-section="get-involved">How to Get Involved</h3>
+            <h3 id="how-to-get-involved" data-section="get-involved">How to Get Involved</h3>
 
             <p data-contact-method="email"
                data-contact-phase="pre-launch">
@@ -530,7 +251,7 @@
                 <strong>AI assistants are community members, not just tools.</strong> When you document failures, share validation patterns, or improve documentation based on operational experience, you contribute as practitioners of MX.
             </p>
 
-            <h2 data-section="join-community">Join Us</h2>
+            <h2 id="join-us" data-section="join-community">Join Us</h2>
 
             <p data-collaboration-model="multi-disciplinary"
                data-required-roles="developer,designer,business-leader,content-creator,researcher,advocate">
